--- a/genindex.html
+++ b/genindex.html
@@ -201,10 +201,22 @@
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.empty_valid">empty_valid() (Context class method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.entry_state">entry_state (Context property)</a>
 </li>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.graph.AssignNode.exclusions">exclusions() (AssignNode method)</a>
+
+      <ul>
+        <li><a href="python2verilog.ir.html#python2verilog.ir.graph.ClockedEdge.exclusions">(ClockedEdge method)</a>
+</li>
+        <li><a href="python2verilog.ir.html#python2verilog.ir.graph.Element.exclusions">(Element method)</a>
+</li>
+        <li><a href="python2verilog.ir.html#python2verilog.ir.graph.IfElseNode.exclusions">(IfElseNode method)</a>
+</li>
+        <li><a href="python2verilog.ir.html#python2verilog.ir.graph.NonClockedEdge.exclusions">(NonClockedEdge method)</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python2verilog.optimizer.html#python2verilog.optimizer.increase_work.IncreaseWorkPerClockCycle.exclusive_vars">exclusive_vars() (IncreaseWorkPerClockCycle static method)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.ExclusiveVar">ExclusiveVar (class in python2verilog.ir.expressions)</a>
@@ -850,22 +862,8 @@
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.instance.Instance.var">var (Instance attribute)</a>
 </li>
-      <li><a href="python2verilog.ir.html#python2verilog.ir.graph.AssignNode.variables">variables() (AssignNode method)</a>
-
-      <ul>
-        <li><a href="python2verilog.ir.html#python2verilog.ir.graph.ClockedEdge.variables">(ClockedEdge method)</a>
-</li>
-        <li><a href="python2verilog.ir.html#python2verilog.ir.graph.Element.variables">(Element method)</a>
-</li>
-        <li><a href="python2verilog.ir.html#python2verilog.ir.graph.IfElseNode.variables">(IfElseNode method)</a>
-</li>
-        <li><a href="python2verilog.ir.html#python2verilog.ir.graph.NonClockedEdge.variables">(NonClockedEdge method)</a>
-</li>
-      </ul></li>
       <li><a href="python2verilog.utils.html#python2verilog.utils.env.Vars">Vars (class in python2verilog.utils.env)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.BinOp.verilog">verilog() (BinOp method)</a>
 
       <ul>
@@ -884,6 +882,8 @@
         <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.UnaryOp.verilog">(UnaryOp method)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.BasicElement.visit_nonclocked">visit_nonclocked() (BasicElement method)</a>
 
       <ul>
