--- a/_modules/python2verilog/optimizer/increase_work.html
+++ b/_modules/python2verilog/optimizer/increase_work.html
@@ -36,7 +36,7 @@
 <span class="kn">import</span> <span class="nn">copy</span>
 <span class="kn">import</span> <span class="nn">itertools</span>
 <span class="kn">import</span> <span class="nn">logging</span>
-<span class="kn">from</span> <span class="nn">typing</span> <span class="kn">import</span> <span class="n">Any</span><span class="p">,</span> <span class="n">Callable</span><span class="p">,</span> <span class="n">Iterator</span><span class="p">,</span> <span class="n">Union</span>
+<span class="kn">from</span> <span class="nn">typing</span> <span class="kn">import</span> <span class="n">Any</span><span class="p">,</span> <span class="n">Callable</span><span class="p">,</span> <span class="n">Iterator</span>
 
 <span class="kn">from</span> <span class="nn">python2verilog</span> <span class="kn">import</span> <span class="n">ir</span>
 <span class="kn">from</span> <span class="nn">python2verilog.optimizer.helpers</span> <span class="kn">import</span> <span class="n">backwards_replace</span>
@@ -114,7 +114,7 @@
         <span class="n">edge</span><span class="p">:</span> <span class="n">ir</span><span class="o">.</span><span class="n">Edge</span><span class="p">,</span>
         <span class="n">new_mapping</span><span class="p">:</span> <span class="nb">dict</span><span class="p">[</span><span class="n">ir</span><span class="o">.</span><span class="n">Var</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">Expression</span><span class="p">],</span>
         <span class="n">old_mapping</span><span class="p">:</span> <span class="nb">dict</span><span class="p">[</span><span class="n">ir</span><span class="o">.</span><span class="n">Var</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">Expression</span><span class="p">],</span>
-        <span class="n">visited_path</span><span class="p">:</span> <span class="nb">dict</span><span class="p">[</span><span class="n">Union</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">Var</span><span class="p">],</span> <span class="nb">int</span><span class="p">],</span>
+        <span class="n">visited_path</span><span class="p">:</span> <span class="nb">dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="nb">int</span><span class="p">],</span>
     <span class="p">)</span> <span class="o">-&gt;</span> <span class="n">ir</span><span class="o">.</span><span class="n">Edge</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Recursively visits the children, conditionally adding them to an optimal path</span>
@@ -136,8 +136,8 @@
         <span class="k">assert</span> <span class="n">guard_dict</span><span class="p">(</span><span class="n">old_mapping</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">Var</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">Expression</span><span class="p">)</span>
         <span class="k">assert</span> <span class="n">guard</span><span class="p">(</span><span class="n">visited_path</span><span class="p">,</span> <span class="nb">dict</span><span class="p">)</span>
         <span class="k">for</span> <span class="n">key</span><span class="p">,</span> <span class="n">value</span> <span class="ow">in</span> <span class="n">visited_path</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
-            <span class="k">assert</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">key</span><span class="p">,</span> <span class="p">(</span><span class="nb">str</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">Var</span><span class="p">))</span>
-            <span class="k">assert</span> <span class="n">guard</span><span class="p">(</span><span class="n">value</span><span class="p">,</span> <span class="nb">int</span><span class="p">)</span>
+            <span class="k">assert</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">key</span><span class="p">,</span> <span class="p">(</span><span class="nb">str</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">Var</span><span class="p">)),</span> <span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="nb">type</span><span class="p">(</span><span class="n">key</span><span class="p">)</span><span class="si">}</span><span class="s2">&quot;</span>
+            <span class="k">assert</span> <span class="n">guard</span><span class="p">(</span><span class="n">value</span><span class="p">,</span> <span class="nb">int</span><span class="p">),</span> <span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="nb">type</span><span class="p">(</span><span class="n">value</span><span class="p">)</span><span class="si">}</span><span class="s2">&quot;</span>
 
         <span class="n">node</span> <span class="o">=</span> <span class="n">edge</span><span class="o">.</span><span class="n">child</span>
         <span class="k">assert</span> <span class="n">node</span>
@@ -162,11 +162,11 @@
             <span class="bp">self</span><span class="o">.</span><span class="n">apply</span><span class="p">(</span><span class="n">node</span><span class="p">)</span>
             <span class="k">return</span> <span class="n">edge</span>
 
-        <span class="c1"># if &quot;_state2_for_5&quot; in node.unique_id:</span>
+        <span class="c1"># if &quot;_state3_while&quot; in node.unique_id:</span>
         <span class="c1">#     breakpoint()</span>
 
         <span class="c1"># Exclusive vars can only be visited once</span>
-        <span class="n">exclusive_vars</span> <span class="o">=</span> <span class="nb">set</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">exclusive_vars</span><span class="p">(</span><span class="n">node</span><span class="o">.</span><span class="n">variables</span><span class="p">()))</span>
+        <span class="n">exclusive_vars</span> <span class="o">=</span> <span class="nb">set</span><span class="p">(</span><span class="n">node</span><span class="o">.</span><span class="n">exclusions</span><span class="p">())</span>
         <span class="k">if</span> <span class="n">exclusive_vars</span> <span class="o">&amp;</span> <span class="n">visited_path</span><span class="o">.</span><span class="n">keys</span><span class="p">():</span>
             <span class="n">logging</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span>
                 <span class="s2">&quot;Intersection </span><span class="si">%s</span><span class="s2"> = {</span><span class="si">%s</span><span class="s2"> &amp; </span><span class="si">%s</span><span class="s2">} ending on </span><span class="si">%s</span><span class="s2">&quot;</span><span class="p">,</span>
@@ -182,7 +182,10 @@
 
         <span class="c1"># Update visited</span>
         <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">node</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">AssignNode</span><span class="p">)</span> <span class="ow">and</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">node</span><span class="o">.</span><span class="n">lvalue</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">ExclusiveVar</span><span class="p">):</span>
-            <span class="n">visited_path</span><span class="p">[</span><span class="n">node</span><span class="o">.</span><span class="n">lvalue</span><span class="p">]</span> <span class="o">=</span> <span class="mi">1</span>
+            <span class="k">assert</span> <span class="n">guard</span><span class="p">(</span>
+                <span class="n">node</span><span class="o">.</span><span class="n">lvalue</span><span class="o">.</span><span class="n">exclusive_group</span><span class="p">,</span> <span class="nb">str</span>
+            <span class="p">),</span> <span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="nb">type</span><span class="p">(</span><span class="n">node</span><span class="o">.</span><span class="n">lvalue</span><span class="o">.</span><span class="n">exclusive_group</span><span class="p">)</span><span class="si">}</span><span class="s2">&quot;</span>
+            <span class="n">visited_path</span><span class="p">[</span><span class="n">node</span><span class="o">.</span><span class="n">lvalue</span><span class="o">.</span><span class="n">exclusive_group</span><span class="p">]</span> <span class="o">=</span> <span class="mi">1</span>
         <span class="n">visited_path</span><span class="p">[</span><span class="n">node</span><span class="o">.</span><span class="n">unique_id</span><span class="p">]</span> <span class="o">=</span> <span class="n">visited_path</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">node</span><span class="o">.</span><span class="n">unique_id</span><span class="p">,</span> <span class="mi">0</span><span class="p">)</span> <span class="o">+</span> <span class="mi">1</span>
 
         <span class="n">new_edge</span><span class="p">:</span> <span class="n">ir</span><span class="o">.</span><span class="n">Edge</span> <span class="o">=</span> <span class="n">ir</span><span class="o">.</span><span class="n">NonClockedEdge</span><span class="p">(</span>
@@ -248,11 +251,11 @@
 
         <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">root</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">BasicNode</span><span class="p">):</span>
             <span class="n">mapper</span><span class="p">:</span> <span class="nb">dict</span><span class="p">[</span><span class="n">ir</span><span class="o">.</span><span class="n">Var</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">Expression</span><span class="p">]</span> <span class="o">=</span> <span class="p">{}</span>
-            <span class="n">visited_path</span><span class="p">:</span> <span class="nb">dict</span><span class="p">[</span><span class="n">Union</span><span class="p">[</span><span class="n">ir</span><span class="o">.</span><span class="n">Var</span><span class="p">,</span> <span class="nb">str</span><span class="p">],</span> <span class="nb">int</span><span class="p">]</span> <span class="o">=</span> <span class="p">{}</span>
+            <span class="n">visited_path</span><span class="p">:</span> <span class="nb">dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="nb">int</span><span class="p">]</span> <span class="o">=</span> <span class="p">{}</span>
             <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">root</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">AssignNode</span><span class="p">):</span>
                 <span class="n">mapper</span><span class="p">[</span><span class="n">root</span><span class="o">.</span><span class="n">lvalue</span><span class="p">]</span> <span class="o">=</span> <span class="n">root</span><span class="o">.</span><span class="n">rvalue</span>
                 <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">root</span><span class="o">.</span><span class="n">lvalue</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">ExclusiveVar</span><span class="p">):</span>
-                    <span class="n">visited_path</span><span class="p">[</span><span class="n">root</span><span class="o">.</span><span class="n">lvalue</span><span class="p">]</span> <span class="o">=</span> <span class="mi">1</span>
+                    <span class="n">visited_path</span><span class="p">[</span><span class="n">root</span><span class="o">.</span><span class="n">lvalue</span><span class="o">.</span><span class="n">exclusive_group</span><span class="p">]</span> <span class="o">=</span> <span class="mi">1</span>
             <span class="k">if</span> <span class="n">root</span><span class="o">.</span><span class="n">has_child</span><span class="p">():</span>
                 <span class="k">assert</span> <span class="n">guard</span><span class="p">(</span><span class="n">root</span><span class="o">.</span><span class="n">child</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">Edge</span><span class="p">)</span>
                 <span class="k">assert</span> <span class="n">guard</span><span class="p">(</span><span class="n">root</span><span class="o">.</span><span class="n">child</span><span class="o">.</span><span class="n">child</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">Node</span><span class="p">)</span>
