deploy: 8a511ca1b42073100119fec4bd8af979f29a5273

--- a/_modules/python2verilog/exceptions.html
+++ b/_modules/python2verilog/exceptions.html
@@ -34,6 +34,8 @@
 <span class="sd">&quot;&quot;&quot;</span>
 <span class="kn">import</span> <span class="nn">ast</span>
 
+<span class="kn">from</span> <span class="nn">python2verilog.ir.expressions</span> <span class="kn">import</span> <span class="n">Var</span>
+
 
 <div class="viewcode-block" id="UnknownValueError">
 <a class="viewcode-back" href="../../python2verilog.exceptions.html#python2verilog.exceptions.UnknownValueError">[docs]</a>
@@ -67,6 +69,21 @@
         <span class="n">inst</span> <span class="o">=</span> <span class="bp">cls</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Unsupported Python syntax </span><span class="si">{</span><span class="n">ast</span><span class="o">.</span><span class="n">dump</span><span class="p">(</span><span class="n">node</span><span class="p">)</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span>
         <span class="k">return</span> <span class="n">inst</span></div>
 </div>
+
+
+
+<div class="viewcode-block" id="StaticTypingError">
+<a class="viewcode-back" href="../../python2verilog.exceptions.html#python2verilog.exceptions.StaticTypingError">[docs]</a>
+<span class="k">class</span> <span class="nc">StaticTypingError</span><span class="p">(</span><span class="ne">Exception</span><span class="p">):</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">    Variable changed type dynamically.</span>
+<span class="sd">    Currently requires strongly typed variables.</span>
+<span class="sd">    &quot;&quot;&quot;</span>
+
+    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="o">*</span><span class="n">args</span><span class="p">:</span> <span class="nb">object</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
+        <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span>
+            <span class="o">*</span><span class="n">args</span><span class="p">,</span>
+        <span class="p">)</span></div>
 
 
 
